--- a/lesson2.tex
+++ b/lesson2.tex
@@ -441,6 +441,8 @@ Out[1]: 1 + 1/(x + 1)
 
 \item $4^x = 262144$, löse für $x$.
 
-\item Sie finden folgende funktion vor $x(t) = u(t-3) \cdot sin(t) \cdot \frac{1}{t-3}$. Plotten / Skizzieren sie diese. Könnten Sie sie zeitlich 'umdrehen' (spiegelung um die ordinate).
+\item Sie finden folgende funktion vor $g(t) = u(t-3) \cdot sin(t) \cdot \frac{1}{t-3}$. Plotten / Skizzieren sie diese. Könnten Sie sie zeitlich 'umdrehen' (spiegelung um die ordinate)?
+
+\item Gegeben $$ \frac{x^{2} + 3 x + 2}{\left(x - 2\right) \left(x + 1\right) \left(x^{2} + x + 1\right)}$$ ermitteln Sie die Partialbruchzerlegung in python!
 
 \end{enumerate}
