--- a/main.tex
+++ b/main.tex
@@ -16,7 +16,8 @@
 % Standard Packages
 \usepackage[utf8]{inputenc}
 \usepackage{svg}
-\usepackage[german]{babel} % deutsch.
+\usepackage[ngerman]{babel} % deutsch.
+\usepackage{lmodern}
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
 \usepackage{graphicx, subfigure}
@@ -26,6 +27,8 @@
 \usepackage{color}
 \usepackage[table]{xcolor}
 \usepackage{transparent}
+
+
 
 % ==========COLORS=============================
 \definecolor{importantColor}{RGB}{255,255,241}
@@ -504,8 +507,8 @@ literate={ϵ}{$\epsilon$}1
 \include{lesson1}
 \include{lesson2}
 \include{lesson3}
-\include{lesson4}
-\include{lesson5}
+% \include{lesson4}
+% \include{lesson5}
 % \include{lesson6}
 % \part{Semester II}
 % \include{lesson7}
