kompl aufgaben und loesungen

--- a/lesson2.tex
+++ b/lesson2.tex
@@ -445,4 +445,8 @@ Out[1]: 1 + 1/(x + 1)
 
 \item Gegeben $$ \frac{x^{2} + 3 x + 2}{\left(x - 2\right) \left(x + 1\right) \left(x^{2} + x + 1\right)}$$ ermitteln Sie die Partialbruchzerlegung in python!
 
+\item Führen Sie eine Polynomdivision von $\frac{g}{f}$ durch:
+$$g(x) = 2 x^{5} + 4 x^{4} - 13 x^{3} - 28 x^{2} - 7 x $$
+$$f(x) = x^2-7 $$
+
 \end{enumerate}
