--- a/solutions.tex
+++ b/solutions.tex
@@ -155,11 +155,11 @@ $$- \frac{4 x + 5}{7 \left(x^{2} + x + 1\right)} + \frac{4}{7 \left(x - 2\right)
 
 \section{Kapitel 3}
 \begin{enumerate}
-\item 
+\item Siehe Tabelle \ref{tab:sol_3_1}.
 
 \renewcommand{\arraystretch}{1.5}
 
-\begin{table}[ht]
+\begin{table}[H] 
 \centering
 \begin{tabular}{|>{\raggedright}m{3cm}|c|c|c|c|c|c|c|c|c|}
 \hline
@@ -173,6 +173,10 @@ $z = 2e^{-i\pi/3}$ & 1 & $-\sqrt{3}$ & 2 & $-\frac{\pi}{3}$ & $2e^{i\pi/3}$  & $
 \hline
 \end{tabular}
 \caption{Lösungen}
+\label{tab:sol_3_1}
 \end{table}
+
+\item TODO
+\item TODO
 
 \end{enumerate}
