--- a/lesson3.tex
+++ b/lesson3.tex
@@ -259,6 +259,12 @@ Out[6]: (2+3j)
 \section{Aufgaben}
 \begin{enumerate}
 \item Lösen Sie folgende aufgabe zunächst ohne, dann nochmal mit python. Man berechne $Re(z)$, $Im(z)$, $|z|$, $arg(z)$, $\overline{z}$, $\frac{1}{z}$, $z^2$, $\frac{z}{\overline{z}}$ für folgende komplexe Zahlen $z$: $z=1+i$, $z=-3$, $z=2e^{-i\pi/3}$. (Aufgabe 4.34 aus \cite{merziger2024repetitorium})
+
+\item Gegeben $z_1 = \alpha e^{5i}$ und $z_2 = e^{it}$ berechnen Sie $z_3 = z_1 \cdot z2$. Stellen das ergebnis in \textbf{polarer Darstellung} dar.
+
+\item Berechnen Sie imaginärteil und realteil von: $e^i$, $e^{i\pi}$, $e^{\pi}$.
+
+
 \end{enumerate}
 
 
