mehr aufgaben, einheitliches Sie-zen

--- a/lesson2.tex
+++ b/lesson2.tex
@@ -314,7 +314,7 @@ In diesem Unterricht wird python verwendet. Alternativ könnte man vieles andere
 	\item Open Source
 	\item General Purpose Langage (Industriestandard für Datascience, Machine Learnung, ...) 
 \end{itemize}
-Allgemein versucht dieser Unterricht die details des Programmierens eher in den Hintergrund zu Stellen und es wird versucht ein Fokus auf die dahinterliegenden Mathematischen Probleme zu legen, weshalb zu Teil die informatik ein wenig kurz und bündig ausfallen wird. 
+Allgemein versucht dieser Unterricht die details des Programmierens eher in den Hintergrund zu Stellen und es wird versucht ein Fokus auf die dahinterliegenden Mathematischen Probleme zu legen, weshalb zu Teil die Informatik ein wenig kurz und bündig ausfallen wird. 
 
 \subsection{Laden von Bibliotheken}
 Oft wollen wir \texttt{python} einfach als 'Taschenrechner' verwenden. Da für \texttt{python} zahllose Zusatzpakete und Programmbibliotheken existieren können wir sehr komplexe Abläufe auslagern durch die Einbindung diese Bibliothheken. Sehr oft werden wir unsere 'Session' mit folgenden importen beginnen:
