--- a/lesson3.tex
+++ b/lesson3.tex
@@ -260,9 +260,13 @@ Out[6]: (2+3j)
 \begin{enumerate}
 \item Lösen Sie folgende aufgabe zunächst ohne, dann nochmal mit python. Man berechne $Re(z)$, $Im(z)$, $|z|$, $arg(z)$, $\overline{z}$, $\frac{1}{z}$, $z^2$, $\frac{z}{\overline{z}}$ für folgende komplexe Zahlen $z$: $z=1+i$, $z=-3$, $z=2e^{-i\pi/3}$. (Aufgabe 4.34 aus \cite{merziger2024repetitorium})
 
-\item Gegeben $z_1 = \alpha e^{5i}$ und $z_2 = e^{it}$ berechnen Sie $z_3 = z_1 \cdot z2$. Stellen das ergebnis in \textbf{polarer Darstellung} dar.
+\item Gegeben $z_1 = \alpha e^{5i}$ und $z_2 = e^{it}$ berechnen Sie (ohne und mit Python) $z_3 = z_1 \cdot z_2$. Stellen das ergebnis in \textbf{polarer Darstellung} dar. 
 
-\item Berechnen Sie imaginärteil und realteil von: $e^i$, $e^{i\pi}$, $e^{\pi}$.
+\item Berechnen Sie (ohne und mit Python) imaginärteil und realteil von: $e^i$, $e^{i\pi}$, $e^{\pi}$. Zusatzaufgabe für den Fall $z=e^{i\pi}$: Schreiben sie auf: Polardarstellung $=$ kartesische Darstellung und betrachten Sie somit eine der 'schönsten' Formeln der Mathematik.
+
+\item Skizzieren Sie $Im(e^{-i 2\pi x})$. (ohne und mit Python).
+
+\item $z_1 = 4-2i$, $z_2 = 9+\frac{1}{2}i$. Berechnen Sie (ohne und mit Python): $z_1 + z_2$, $z_1 \cdot z_2$, $z_1 / z_2$, $arg(z_1)$, $|z_1|$, $arg(z_2)$, $|z_2|$.
 
 
 \end{enumerate}
