--- a/lesson1.tex
+++ b/lesson1.tex
@@ -699,16 +699,16 @@ $$L = 20 \cdot log_{10}(x)$$
         \item $(A \cup B) \setminus C$
         \item $(B \cap C) \cup A$
     \end{enumerate}
-    \item Zeichne einen Input/Output Plot für die Funktionen 
+    \item Zeichnen Sie einen Input/Output Plot für die Funktionen 
     \begin{enumerate} % Use alphabetical labels for subitems
         \item $f(x) = min(x, 0)$
         \item $f(x) = |x+1|-1$. Welche Bedeutung haben die beiden zahlen ($1$, $-1$ )? Wenn man sie verändern würde, was passiert mit dem Plot?
     \end{enumerate}
     \item Was gibt es zu Abb. \ref{fig:distortion_online} zu sagen?
-    \item Konstruiere (mache eine Formel, formale Beschreibung) einen 'hard clipper'. Dies ist eine Verzerrung. Die Verzerrung soll keine Werte 'durchlassen' die größer als 0.9 und kleiner als -0.9 sind. Zeichne den Graphen. Für Werte zwischen -0.9 und 0.9 soll sich der Verzerrer linear verhalten. Werden hier gerade oder ungerade Harmonische Erzeugt?
-    \item Berechne die 'Spannung' $T$ (eine Kraft) in einer Piano Saite. Die Grundfrequenz der Saite ist 440 Hz, sie ist aus Stahl und ca. 50 cm lang. Gegeben ist folgende Formel: $f_0 = \lambda \sqrt{\frac{T}{\rho A}}$. Hier ist $\rho$ die Dichte des Materials und $A$ der Flächendurchschnitt der Saite. Wir nehmen an sie hat einen Durchmesser $d$ von ca. 1mm. Siehe Abb. \ref{fig:string_ex}.
+    \item Konstruieren Sie (mache eine Formel, formale Beschreibung) einen 'hard clipper'. Dies ist eine Verzerrung. Die Verzerrung soll keine Werte 'durchlassen' die größer als 0.9 und kleiner als -0.9 sind. Zeichne den Graphen. Für Werte zwischen -0.9 und 0.9 soll sich der Verzerrer linear verhalten. Werden hier gerade oder ungerade Harmonische Erzeugt?
+    \item Berechnen Sie die 'Spannung' $T$ (eine Kraft) in einer Piano Saite. Die Grundfrequenz der Saite ist 440 Hz, sie ist aus Stahl und ca. 50 cm lang. Gegeben ist folgende Formel: $f_0 = \lambda \sqrt{\frac{T}{\rho A}}$. Hier ist $\rho$ die Dichte des Materials und $A$ der Flächendurchschnitt der Saite. Wir nehmen an sie hat einen Durchmesser $d$ von ca. 1mm. Siehe Abb. \ref{fig:string_ex}.
 
-    \item Beweise mittels Gleichungen \ref{eq:linearity1}, \ref{eq:linearity2} oder \ref{eq:linearity3} dass $f(x)=|x|$ nicht linear ist.
+    \item Beweisen Sie mittels Gleichungen \ref{eq:linearity1}, \ref{eq:linearity2} oder \ref{eq:linearity3} dass $f(x)=|x|$ nicht linear ist.
 
 
 
