--- a/lesson3.tex
+++ b/lesson3.tex
@@ -268,6 +268,9 @@ Out[6]: (2+3j)
 
 \item $z_1 = 4-2i$, $z_2 = 9+\frac{1}{2}i$. Berechnen Sie (ohne und mit Python): $z_1 + z_2$, $z_1 \cdot z_2$, $z_1 / z_2$, $arg(z_1)$, $|z_1|$, $arg(z_2)$, $|z_2|$.
 
+\item $z_1 = e^{ i 2\pi 3 t}$, $z_2 = e^{ i 2\pi 5 t}$, $z_3 = e^{ i 2\pi t}$. Berechnen Sie (ohne und mit Python): $Re(z_4) = z_1 z_2 + z_3$.
+
+
 
 \end{enumerate}
 
