Fehler korrektur: Aufgabe 1.6 und polyonom seite 34.

--- a/00_vorbemerkungen.tex
+++ b/00_vorbemerkungen.tex
@@ -47,6 +47,9 @@ Es kann nicht garantiert werden dass dieses Online-Service ständig online ist u
 
 \section*{Contributors}
 Hier finden sich hoffentlich bald Menschen die diesen Text gelesen haben und Verbesserungsvorschläge gemacht haben.
+\begin{itemize}
+	\item Youjin Kim, Korrektur hinweis, Fehler in Aufgabe 1.6.
+\end{itemize}
 
 % \section*{General TODOs}
 % \begin{itemize}
