--- a/solutions.tex
+++ b/solutions.tex
@@ -24,7 +24,7 @@ Wesentlich eleganter ist aber: $f(x) = min(0.9, max(-0.9, x))$.
 Die Fläche $A$ muss aus dem Durchmesser der Saite berechnet werden, $A = r^2 \pi$ also $A = \pi (d/2)^2$.  
 Schließlich muss die Formel nach $T$ aufgelöst werden:
 
-$$ f_0 = \lambda \sqrt{\frac{T}{\rho A}} \qquad  \Bigm\lvert \cdot \frac{1}{\lambda}$$ 
+$$ f_0 = \frac{1}{\lambda} \sqrt{\frac{T}{\rho A}} \qquad  \Bigm\lvert \cdot \lambda$$ 
 $$ f_0 \lambda =  \sqrt{\frac{T}{\rho A}} \qquad \Bigm\lvert  \cdot ^2$$
 $$ (f_0 \lambda)^2 =  \frac{T}{\rho A} \qquad \Bigm\lvert \cdot \rho A$$
 $$ \rho A (f_0 \lambda)^2 =  T $$ 
