--- a/lesson2.tex
+++ b/lesson2.tex
@@ -400,7 +400,7 @@ Out[1]: {5: 1, 1: 1, -2: 1}
 \end{python}
 
 Hier ist hervorzuheben dass \texttt{\{5: 1, 1: 1, -2: 1\}} ein sog. \texttt{Dictionary} darstellt das sowohl die Position der Nullstellen als auch die \emph{Anzahl} der Nullstellen an der jeweiligen Stelle enthält. 
-Beispielsweise das Polynom $f(x) = x^2 - 6^x + 9$ liefert das \texttt{Dictionary} \texttt{\{3: 2\}}, also eine \emph{Doppelte Nullstelle} an der Position $x=3$. 
+Beispielsweise das Polynom $f(x) = x^2 - 6x + 9$ liefert das \texttt{Dictionary} \texttt{\{3: 2\}}, also eine \emph{Doppelte Nullstelle} an der Position $x=3$. 
 
 
 
