--- a/solutions.tex
+++ b/solutions.tex
@@ -182,7 +182,7 @@ $z_3 = z_1 \cdot z_2 = \alpha e^{5i} e^{it} = \alpha e^{it + i5} = \alpha e^{i(t
 \item 
 \begin{enumerate}
 \item $e^i = e^{1i} = cos(1) + i sin(1) \implies Re(e^i) = cos(1) ,Im(e^i) = sin(1)$
-\item $e^i\pi = cos(\pi) + i sin(\pi)$. Da $cos(\pi) = -1$ und $sin(\pi) = 0$ sehen wir, dass $Re(e^{i\pi}) = -1$ und $Im(e^{i\pi}) = 0$. In Summe können wir vereinfachen zu: $e^{i\pi} = -1$. Gerne wird diese oder du umgestellte Variante $e^{i\pi} -1 = 0$ als eine der 'schönsten' Formeln bezeichnet da hier wichtige Konstanten in Zusammenhang gebracht werden: $e, \pi, i, 1, 0$.  
+\item $e^{i\pi} = cos(\pi) + i sin(\pi)$. Da $cos(\pi) = -1$ und $sin(\pi) = 0$ sehen wir, dass $Re(e^{i\pi}) = -1$ und $Im(e^{i\pi}) = 0$. In Summe können wir vereinfachen zu: $e^{i\pi} = -1$. Gerne wird diese oder du umgestellte Variante $e^{i\pi} + 1 = 0$ als eine der 'schönsten' Formeln bezeichnet da hier wichtige Konstanten in Zusammenhang gebracht werden: $e, \pi, i, 1, 0$.  
 \item Die Frage ist eine Fangfrage. $e^{\pi}$ ist nicht komplex. Der Realteil ist damit schlicht $e^{\pi} \approx 23.14$ und der Imaginärteil $0$.
 \end{enumerate}
 \item $e^{-i2\pi x} = cos(-2\pi x) + i sin(-2\pi x) \implies Im(e^{-i2\pi x}) = sin(-2\pi x) = -sin(2\pi x)$
