--- a/00_vorbemerkungen.tex
+++ b/00_vorbemerkungen.tex
@@ -48,7 +48,10 @@ Es kann nicht garantiert werden dass dieses Online-Service ständig online ist u
 \section*{Contributors}
 Hier finden sich hoffentlich bald Menschen die diesen Text gelesen haben und Verbesserungsvorschläge gemacht haben.
 \begin{itemize}
-	\item Youjin Kim, Korrektur hinweis, Fehler in Aufgabe 1.6.
+	\item Youjin Kim, Fehlerkorrektur in Aufgabe 1.6.
+	\item Alexander Simeonov \& Valentin De Ridder, Fehlerkorrektur in Aufgabe 1.6.
+	\item Alexander Simeonov, Fehlerkorrektur in Polynom p. 34.
+	\item Adrian Fritsche, Fehlerkorrektur in Umformung von $e^{i\pi}=-1$ in Lösung, Kapitel 3, Aufgabe 3, b).
 \end{itemize}
 
 % \section*{General TODOs}
