--- a/lesson1.tex
+++ b/lesson1.tex
@@ -244,7 +244,7 @@ f(x_1 + x_2) = f(x_1) + f(x_2) \label{eq:linearity2}
 \end{equation}
 
 
-In zB \cite{zolzer2002dafx} finden wir eine den obigen 2 bedingungen äquivalente Definition für Linearität von Systemen. Gegeben Input $x(t)$ und Output $y(t)$:
+In zB \cite{zolzer2002dafx} finden wir eine den obigen 2 Bedingungen äquivalente Definition für Linearität von Systemen. Gegeben Input $x(t)$ und Output $y(t)$:
 
 \begin{equation}
 x(t) = Ax_1(t) + Bx_2(t) \to  y(t) = Ay_1(t) + By_2(t) \label{eq:linearity3}
@@ -405,8 +405,8 @@ Das große Sigma, $\Sigma$ ist eine kurzschreibweise für Summen. Wir finden die
 \begin{equation}
 {\displaystyle \sum _{k=1}^{5}k = 1 + 2 + 3 + 4 + 5 }
 \end{equation}
-\emph{Index}
-Hier ist $k$ der Index (Auch 'Laufindex' oder 'Zähler' genannt). Unter dem Sigma steht bei welcher zahl zu zählen begonnen wird und welchen Buchstaben wir als Index wählen. über dem Sigma steht bis wohin wir zählen. Nach dem Sigma steht was addiert wird. Allgemein:
+\index{Index}
+Hier ist $k$ der \emph{Index} (Auch 'Laufindex' oder 'Zähler' genannt). Unter dem Sigma steht bei welcher zahl zu zählen begonnen wird und welchen Buchstaben wir als Index wählen. über dem Sigma steht bis wohin wir zählen. Nach dem Sigma steht was addiert wird. Allgemein:
 
 \important{
 \begin{equation}
@@ -524,7 +524,7 @@ $$ x = d\cdot 10^e$$
 
 
 \subsubsection{Logarithmen}
-Konzeptuell verwandt mit der Wurzel, beantwortet er die frage nach dem Exponenten bei gegebener Basis.
+Konzeptuell verwandt mit der Wurzel, beantwortet er die Frage nach dem Exponenten bei gegebener Basis.
 
 $$ 5 ^2 =25 $$
 
