--- a/lesson2.tex
+++ b/lesson2.tex
@@ -75,7 +75,7 @@ Im digitalen ist die Idee recht simpel, ein Signal dass an der stelle $n=0$ den 
     \caption{Impuls funktion.}
     \label{fig:deltaVersions}
 \end{figure}
-\todo{Possibly change x achsis in figure \ref{fig:deltaVersions} to $n$.}
+\todo{Possibly change x achsis in figure \ref{fig:deltaVersions} to $n$. Also make the usual arrow to point towards infinity in a).}
 
 
 
@@ -199,7 +199,7 @@ Werden die Nullstellen mit der richtigen Vielfachheit (wiederholte Nullstellen) 
 
 
 Zunächst sei ganz pragmatisch darauf verwiesen, dass diverse Computersysteme sehr gut in dieser Situation funktionieren, siehe zB. Abschnitt \ref{sec:python}. \\
-Bei hochgradingen Polynomen ist es sicherlich ein guter Schritt sich den Funktionsverlauf zu plotten und den Verlauf anzusehen. Durchaus lassen sich hier Nullstellen 'raten', die dann als Linearfaktor abgespalten werden können,siehe Abschnitt \ref{sec:linearfaktoren}. \emph{Numerische Verfahren} wie \emph{Newton-Raphson} sind hier auch äußerst wichtig, speziell in der Audio Technik. Ein Beispiel für die numerische Suche nach Nullstellen im Kontext der Klangprozessierung wäre die Simulation von nicht-linearen Schaltkreisen ('Diode clipper'), siehe zB. \cite{holmes2015improving}. \\
+Bei hochgradingen Polynomen ist es sicherlich ein guter Schritt sich den Funktionsverlauf zu plotten und den Verlauf anzusehen. Durchaus lassen sich hier Nullstellen 'raten', die dann als Linearfaktor abgespalten werden können, siehe Abschnitt \ref{sec:linearfaktoren}. \emph{Numerische Verfahren} wie \emph{Newton-Raphson} sind hier auch äußerst wichtig, speziell in der Audio Technik. Ein Beispiel für die numerische Suche nach Nullstellen im Kontext der Klangprozessierung wäre die Simulation von nicht-linearen Schaltkreisen ('Diode clipper'), siehe zB. \cite{holmes2015improving}. \\
 
 Da man in der Gestaltung von Filtern, Hall Algorithmen etc oft die Notwendigkeit hat Funktionen zu Gestalten und deren Nullstellen an bestimmte Orte zu verschieben ist es nicht ausreichend, nur ein Polynom einem Computer zuzuführen um die Nullstellen 'ausgespuckt' zu bekommen. Es ist oft notwendig Systeme umzuformulieren um 'Zugriff' auf die Orte der Nullstellen zu haben, zb. durch Zerlegung in Linearfaktoren. 
 \todo[inline]{Rational root theorem? https://en.wikipedia.org/wiki/Rational\_root\_theorem}
