--- a/lesson2.tex
+++ b/lesson2.tex
@@ -278,6 +278,7 @@ $$P(x) = x^{3} + 5 x^{2} - 2 x - 24 = (x-2) \cdot (x^2 + 7x + 12)$$
 
 Was hier interessant ist, ist dass $(x-2)$ ein \emph{linearer Faktor} ist, also keine Potenzen größer 1 enthält. Es ist offensichtlich dass der Faktor $(x-2)$ $0$ wird an der Stelle $2$. Da $P(x)$ ein Produkt ua. dieses Faktors ist haben wir eine Nullstelle von $P$.
 
+\todo[inline]{Add some youtube video where this is done step by step.}
 
 \subsection{Zerlegung in Linearfaktoren}\label{sec:linearfaktoren}
 
