--- a/lesson3.tex
+++ b/lesson3.tex
@@ -156,7 +156,7 @@ $$\frac{z_1}{z_2} = \frac{r_1e^{i\varphi_1}} { r_2e^{i\varphi_2}} =  \frac{r_1}{
 
 Potenzieren lässt sich aus der Multiplikation ableiten als: 
 \important{
-$$z_1 ^n = (r_1 e^{i\varphi_1})^n  = r_1^{n} e^{in\varphi_1} $$}
+$$z ^n = (r e^{i\varphi})^n  = r^{n} e^{in\varphi} $$}
 
 \praxis{In der Beschreibung digitaler Filter und Verzögerungen (Delays) werden üblicherweise Potenzen komplexer Zahlen verwendet ($z^{-1}$ entspricht einer Verzögerung um 1 Sample, siehe Abschnitt \ref{subsec:rationalExp}). Daher ist es natürlich sinnvoll Komfort mit komplexen Potenzen aufzubauen. }
 
