--- a/lesson1.tex
+++ b/lesson1.tex
@@ -322,6 +322,7 @@ Reelle Zahlen füllen die 'Lücken' zwischen den Rationalen Zahlen. Enthalten si
 
 
 \subsection{Komplexe Zahlen $\mathbb{C}$}
+\index{Komplexe Zahlen}
 Besonders wichtig für die Tontechnik, hierzu mehr in Kapitel \ref{chap:complex}. Erweiterung der Zahlengeraden (siehe Abb. \ref{fig:zahlengerade}) auf die 'Komplexe Ebene'. Sie dienen uns zur Darstellung von Schwingungen, kommen vor in der Fouriertransformation (bei jeder Berechnung eines klassischen Audio Spektrums!) etc. \
 Es gibt noch weitere Zahlen Mengen, zum Beispiel die \emph{Quaternionen}, eine Erweiterung der Komplexen Zahlen. Diese finden zum Beispiel Anwendung in der Grafik Verarbeitung (in mehr oder weniger jeder 3D Animation zB.). 
 
