--- a/lesson5.tex
+++ b/lesson5.tex
@@ -138,7 +138,9 @@ A = \begin{bmatrix} a_{11} & a_{12} & \dots & a_{1m} \\
 \end{equation}
 
 \subsection*{Einheitsmatrix}
+\subsection*{Transposition}
 \subsection*{Determinante}
+\subsection*{Invertierung}
 \subsection*{Eigenwert und Eigenvektoren}
 \index{Eigenwert}\index{Eigenvektor}\index{Zustandsraumdarstellung}\index{State-Space}
 
