--- a/references.bib
+++ b/references.bib
@@ -92,3 +92,18 @@
   journal={California Technical Pub},
   year={1997}
 }
+
+@misc{dewiki:251726014,
+   author = "Wikipedia",
+   title = "Paul Dirac --- Wikipedia{,} die freie Enzyklopädie",
+   year = "2024",
+   howpublished = "\url{https://de.wikipedia.org/w/index.php?title=Paul_Dirac&oldid=251726014}",
+   note = "[Online; Stand 31. Januar 2025]"
+ }
+
+ @book{strang2022introduction,
+  title={Introduction to linear algebra},
+  author={Strang, Gilbert},
+  year={2022},
+  publisher={SIAM}
+}
