--- a/00_vorbemerkungen.tex
+++ b/00_vorbemerkungen.tex
@@ -7,9 +7,10 @@ Viele der rein mathematischen Bemerkungen, Aussagen und Beispiele sind Abgeleite
 
 \section*{Errata}
 
-Bezüglich etwaigen Fehlern bitte einen \textbf{neuen}\emph{issue} auf github zu eröffnen: \href{https://github.com/hrtlacek/matheFuerTonmeisterinnen/issues}{hier}. Größere Kommentare, Zweifel an Richtigkeit, Feedback etc, sehr gerne auch direkt per mail: \texttt{ptrk.lechner@gmail.com}.
+Bezüglich etwaigen Fehlern bitte einen \textbf{neuen \emph{issue}} auf github zu eröffnen: \href{https://github.com/hrtlacek/matheFuerTonmeisterinnen/issues}{hier}. Größere Kommentare, Zweifel an Richtigkeit, Feedback etc, sehr gerne auch direkt per mail: \\
+\texttt{ptrk.lechner@gmail.com}.
 
-Da ich per email benachrichtigt werde wenn ein \emph{neuer} issue angelegt wird und wir so überblick behalten wer als erstes den Fehler entdeckt hat ist dies der bei weitem bevorzugte weg einen Fehgler zu melden! So ind alle sofort informiert, man kann sehen wenn ein Fehler schon bekannt ist etc.
+Da ich per email benachrichtigt werde wenn ein \emph{neuer} issue angelegt wird und wir so Überblick behalten wer als erstes den Fehler entdeckt hat, ist dies der bei weitem bevorzugte Weg einen Fehgler zu melden! So sind alle sofort informiert, man kann sehen wenn ein Fehler schon bekannt ist etc.
 
 Sehr gerne können Fehler, Korrekturen und Ergänzungen auch selbst geändert werden und ein \emph{pull request} gemacht werden.
 
