Some work on colab notebook for determinant

--- a/lesson5.tex
+++ b/lesson5.tex
@@ -140,6 +140,7 @@ A = \begin{bmatrix} a_{11} & a_{12} & \dots & a_{1m} \\
 \subsection*{Einheitsmatrix}
 \subsection*{Transposition}
 \subsection*{Determinante}
+\colab{https://colab.research.google.com/github/hrtlacek/matheFuerTonmeisterinnen/blob/master/python/notebooks/Determinante.ipynb}
 \subsection*{Invertierung}
 \subsection*{Eigenwert und Eigenvektoren}
 \index{Eigenwert}\index{Eigenvektor}\index{Zustandsraumdarstellung}\index{State-Space}
