--- a/main.tex
+++ b/main.tex
@@ -352,7 +352,7 @@
 % ipython notebook reference
 \newcommand{\colab}[1]{%
   \begingroup\normalfont
-  \href{#1}{\includegraphics[height=\fontcharht\font`\B]{img/colabBadge.png}\footnote{#1}}%
+  \href{#1}{\includegraphics[height=\fontcharht\font`\B]{img/colabBadge.PNG}\footnote{#1}}%
   \endgroup
 }
 
