--- a/python/notebooks/Determinante.ipynb
+++ b/python/notebooks/Determinante.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "1acd2d3e-b0c8-491c-a8ba-33ccd358abfb",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ae27a28a-3ee8-4524-a190-195b35a259f5",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4eac3992-a977-474c-a3e6-9ce7ef5f0f6a",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,8 @@
     "    plot(v2[0], v2[1], 'r--')\n",
     "    xlim(-5,5)\n",
     "    ylim(-5,5)\n",
-    "    grid();"
+    "    grid();\n",
+    "    show()"
    ]
   },
   {
@@ -94,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "dddfa2aa-4884-4c0f-8310-6f26775482cb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c6d6f7aee474410be86131960fb18ad",
+       "model_id": "f1faa548a24b4abf8e5ca259d73132c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -118,7 +119,7 @@
        "<function __main__.plotTransform(a, b, c, d)>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
